bizinikiwi/pezframe/support/test/tests/construct_runtime_ui/feature_gated_system_pallet.stderr
error: `System` pezpallet declaration is feature gated, please remove any `#[cfg]` attributes
  --> tests/construct_runtime_ui/feature_gated_system_pallet.rs:24:3
   |
24 |         System: pezframe_system::{Pezpallet, Call, Storage, Config<T>, Event<T>},
   |         ^^^^^^
